<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasaHero</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="mapquest_api_key">Fmjtd%7Cluub25a2l1%2Cb5%3Do5&#8211;9uzxqz</string>
    <string name="from_hint">Choose a starting point&#8230;</string>
    <string name="to_hint">Choose destination&#8230;</string>
    <string name="done">Done</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="icon_home">&#xf015;</string>
    <string name="icon_male">&#xf183;</string>
    <string name="show_details">Show Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="icon_truck">&#xf0d1;</string>
    <string name="icon_road">&#xf018;</string>
    <string name="icon_play">&#xf04b;</string>
    <string name="icon_stop">&#xf04d;</string>
    <string name="icon_arrow_up">&#xf062;</string>
    <string name="icon_arrow_down">&#xf063;</string>
    <string name="icon_arrow_left">&#xf060;</string>
    <string name="icon_arrow_right">&#xf061;</string>
    <string name="trip_details_title">Trip Details</string>
    <string name="view_more_itineraries">View more routes</string>
    <string name="icon_location_arrow">&#xf124;</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="more_options">More Options</string>
    <string name="hide_options">Hide Options</string>
    <string name="walk_speed">Enter walk speed</string>
    <string name="walk_distance">Enter maximum walk distance</string>
    <string name="ok">Okay</string>
    <string name="icon_list">&#xf03a;</string>
    <string name="icon_angle_left">&#xf104;</string>
    <string-array name="trip_plan_time_options">
        <item>Arrive by</item>
        <item>Depart on</item>
    </string-array>

</resources>