<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mainOptionsPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/fromView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/from_hint" >
        </EditText>

        <EditText
            android:id="@+id/toView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/to_hint" />

        <Button
            android:id="@+id/more_options_toggle"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_options" />

        <Button
            android:id="@+id/plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

        <ScrollView
            android:id="@+id/more_options_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <Spinner
                    android:id="@+id/spinner_arrive_or_depart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                
                 <TextView
                    android:id="@+id/time_arrive_or_depart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

              
                <EditText
                    android:id="@+id/walkSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/walk_speed" />

                <EditText
                    android:id="@+id/walkDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/walk_distance" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/geoHintsPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/geoInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <ListView
            android:id="@+id/geoList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>