<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.mapquest.android.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="@string/mapquest_api_key"
        android:clickable="true"
        android:enabled="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/options_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_home"
             android:layout_alignParentLeft="true" />

        <fragment
            android:id="@+id/options_panel_fragment"
            android:name="com.pasahero.android.OptionsPanelFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/options_nav" >
        </fragment>

        <fragment
            android:id="@+id/itinerary_fragment"
            android:name="com.pasahero.android.ItineraryFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/options_panel_fragment" >
        </fragment>

        <Button
            android:id="@+id/my_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_location_arrow"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</FrameLayout>