<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/more_itineraries_toggle"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/view_more_itineraries" />

        <ListView
            android:id="@+id/itinerary_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <LinearLayout
            android:id="@+id/terminal_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/start_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_play" />

            <TextView
                android:id="@+id/start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itinerary_pane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/terminal_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/end_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_stop" />

            <TextView
                android:id="@+id/end_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>